[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-rt = "2.6.0"
serde = {version = "1.0.204", features = ["derive"]}
chrono = {version = "*", features = ["serde"]}
mysql = "*"

[[bin]]
name = "service"